@@ -16,11 +16,12 @@ import (
 )
 
 type Registrar struct {
-	Channel      chan []file.State
-	out          successLogger
-	done         chan struct{}
-	registryFile string // Path to the Registry File
-	wg           sync.WaitGroup
+	Channel                 chan []file.State
+	out                     successLogger
+	done                    chan struct{}
+	registryFile            string      // Path to the Registry File
+	registryFilePermissions os.FileMode // Permissions to apply on the Registry File
+	wg                      sync.WaitGroup
 
 	states               *file.States // Map with all file paths inside and the corresponding state
 	gcRequired           bool         // gcRequired is set if registry state needs to be gc'ed before the next write
@@ -40,9 +41,10 @@ var (
 	registryWrites = monitoring.NewInt(nil, "registrar.writes")
 )
 
-func New(registryFile string, flushTimeout time.Duration, out successLogger) (*Registrar, error) {
+func New(registryFile string, registryFilePermissions os.FileMode, flushTimeout time.Duration, out successLogger) (*Registrar, error) {
 	r := &Registrar{
-		registryFile: registryFile,
+		registryFile:            registryFile,
+		registryFilePermissions: registryFilePermissions,
 		done:         make(chan struct{}),
 		states:       file.NewStates(),
 		Channel:      make(chan []file.State, 1),
@@ -259,7 +261,7 @@ func (r *Registrar) writeRegistry() error {
 	logp.Debug("registrar", "Write registry file: %s", r.registryFile)
 
 	tempfile := r.registryFile + ".new"
-	f, err := os.OpenFile(tempfile, os.O_RDWR|os.O_CREATE|os.O_TRUNC|os.O_SYNC, 0600)
+	f, err := os.OpenFile(tempfile, os.O_RDWR|os.O_CREATE|os.O_TRUNC|os.O_SYNC, r.registryFilePermissions)
 	if err != nil {
 		logp.Err("Failed to create tempfile (%s) for writing: %s", tempfile, err)
 		return err
